// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/kanban/calculation/KanbanCalculation > base case 1`] = `
<div>
  <span
    class="mocked mocked"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`components/kanban/calculation/KanbanCalculation > calculations menu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="mocked mocked"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`components/kanban/calculation/KanbanCalculation > no menu should appear in readonly mode 1`] = `
<div>
  <span
    class="mocked mocked"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;
